objects/CRMforNonProfit__George_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>CRMforNonProfit__Accounts_Production_URL__c</fullName>
        <label>Accounts Production URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Accounts_Sandbox_URL__c</fullName>
        <label>Accounts Sandbox URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Notifications_Site_Name__c</fullName>
        <inlineHelpText>Public site to receive the George notifications on.</inlineHelpText>
        <label>Notifications Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Public_Key__c</fullName>
        <label>Public Key</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Redirect_URI__c</fullName>
        <label>Redirect URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Token_Endpoint__c</fullName>
        <label>Token Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Use_Production_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Production Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Web_Api_Key__c</fullName>
        <label>Web Api Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>George Settings</label>
    <pluralLabel>George Settings</pluralLabel>
</CustomObject>